# ChangeLog for media-tv/xdtv
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.47 2007/02/24 12:19:40 aballier Exp $

*xdtv-2.4.0 (23 Feb 2007)

  23 Feb 2007; Alexis Ballier <aballier@gentoo.org> +xdtv-2.4.0.ebuild:
  Version bump

  16 Feb 2007; Simon Stelling <blubb@gentoo.org> xdtv-2.3.3.ebuild:
  depend on >=portage-2.1.2 on amd64 to make sure the assembler USE flags are
  unmasked

  07 Jan 2007; Alexis Ballier <aballier@gentoo.org> xdtv-2.2.0-r1.ebuild,
  xdtv-2.3.3.ebuild:
  einfo -> elog

  29 Oct 2006; Alexis Ballier <aballier@gentoo.org> xdtv-2.2.0-r1.ebuild,
  xdtv-2.3.3.ebuild:
  Fix autotools deps, bug #153339

  21 Oct 2006; Alexis Ballier <aballier@gentoo.org>
  +files/xdtv-2.3.3-external-ffmpeg.patch, xdtv-2.3.3.ebuild:
  Adding a patch to link against ffmpeg rather than building it and linking
  statically. Removing dvb support because it might break with that patch.

  10 Oct 2006; Alexis Ballier <aballier@gentoo.org> metadata.xml:
  Updating metadata.xml, maintainance inherited from Flameeyes

  08 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.2.0-r1.ebuild:
  Set app-defaults directory for modular xorg. Thanks to Andi for reporting in
  bug #150445.

  01 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.2.0-r1.ebuild,
  xdtv-2.3.3.ebuild:
  Remove build-time dependency on xproto and/or xextproto.

  31 Aug 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.3.3.ebuild:
  Disable x264 support for now, it's not API stable. See bug #145343.

  09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> xdtv-2.2.0-r1.ebuild:
  Remove xorg-server fake depend, was an artefact produced by the first dep
  checking scripts.

  09 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  -files/xdtv-2.3.2-alevt-vbi.patch,
  -files/xdtv-2.3.2-strict-aliasing.patch, xdtv-2.2.0-r1.ebuild,
  -xdtv-2.3.2.ebuild, -xdtv-2.3.2-r1.ebuild, -xdtv-2.3.2-r2.ebuild,
  xdtv-2.3.3.ebuild: