@@ -105,22 +105,22 @@ DIST xdtv-2.2.0-gcc4-amd64.patch.tar.gz 6027 RMD160 eeab9185747eae8f7887d65e5035
 DIST xdtv-2.2.0.tar.gz 905162 RMD160 ff002f07cbba6d076e73142eb5b1cd1ba97448c3 SHA1 8a7f4e92e1d1604541aed9689cc701bdef9822f1 SHA256 a7828bc963133184f27df78e9c2d23c2b5f75e130801a114b85fbf137d2780c4
 DIST xdtv-2.3.3.tar.gz 2874010 RMD160 839627fdf614f2bf18a8c6afde31a418db5a975f SHA1 b3368226538d4cdc1673d574351f21dab8c237b1 SHA256 4819afdb4a706adb570b140574e24432a9da168c821133abd246f821ce09f0a2
 DIST xdtv-2.4.0.tar.gz 3230154 RMD160 b481a4d65b3fe34d4790f4e0851919588974fa90 SHA1 5176111f781c54b1374093855a407f89639b31ad SHA256 54d36552284f17aadc4b7455aed91d5efdbbba64827e369b3d8a80ec00543c3e
-EBUILD xdtv-2.2.0-r1.ebuild 7105 RMD160 18193148993e4614e2170dec8ae9608ca87df60b SHA1 a70da26a9e6515e3a3a837ba59f7087187c3c103 SHA256 aaaaf15321b778f4835cd2ed357ed6830a437f60c5a30e2b18302608dfab6a56
-MD5 feb3ede4d8e960cf39e0dc83a75eb785 xdtv-2.2.0-r1.ebuild 7105
-RMD160 18193148993e4614e2170dec8ae9608ca87df60b xdtv-2.2.0-r1.ebuild 7105
-SHA256 aaaaf15321b778f4835cd2ed357ed6830a437f60c5a30e2b18302608dfab6a56 xdtv-2.2.0-r1.ebuild 7105
-EBUILD xdtv-2.3.3.ebuild 6102 RMD160 dc61b528db4296d6ffc91eb84039b5b53930de83 SHA1 cfcaca70c82b3b95c4d65c9298e7719f0b12e5d8 SHA256 8124da1e8b5b1eb6362044398fead92385053abfc4830b86e32b47f38843693b
-MD5 e8fddcb8b24d35b9f186b2012e815dae xdtv-2.3.3.ebuild 6102
-RMD160 dc61b528db4296d6ffc91eb84039b5b53930de83 xdtv-2.3.3.ebuild 6102
-SHA256 8124da1e8b5b1eb6362044398fead92385053abfc4830b86e32b47f38843693b xdtv-2.3.3.ebuild 6102
+EBUILD xdtv-2.2.0-r1.ebuild 7108 RMD160 04bbac1b2ff64c9ec706a3791c2e6678703e964a SHA1 b8feee670de74c505f9d1be20f581a27152c4068 SHA256 4791e641ae94b882e4ffe01cd13777dafcd41429833aa8377f85caa0d4c8bdc6
+MD5 0ccb494ab6e63fda662dd63d676a1062 xdtv-2.2.0-r1.ebuild 7108
+RMD160 04bbac1b2ff64c9ec706a3791c2e6678703e964a xdtv-2.2.0-r1.ebuild 7108
+SHA256 4791e641ae94b882e4ffe01cd13777dafcd41429833aa8377f85caa0d4c8bdc6 xdtv-2.2.0-r1.ebuild 7108
+EBUILD xdtv-2.3.3.ebuild 6108 RMD160 932fc3f7b3ba6c7dcf8367fd46de475111902f8f SHA1 3e1187ead67f8f9861ae92e7db59adb6da53c40a SHA256 5e893367b5869c0144600efb57042cb5ca0f2615beba717c66af44862662bf7b
+MD5 43f79be3cb8aa957e6fce57288af131e xdtv-2.3.3.ebuild 6108
+RMD160 932fc3f7b3ba6c7dcf8367fd46de475111902f8f xdtv-2.3.3.ebuild 6108
+SHA256 5e893367b5869c0144600efb57042cb5ca0f2615beba717c66af44862662bf7b xdtv-2.3.3.ebuild 6108
 EBUILD xdtv-2.4.0.ebuild 5303 RMD160 917c5148f4a22cf19f875b7b5f29e1ecd799683a SHA1 cb36b3babfa8ca883e038299358d2ffd8119d042 SHA256 b8bc79102656770308cf9c1decf6d0df9729d4acf20507f6af5abc63f157ef6d
 MD5 9d45d87586e91375b34f1ed1c98c7ca6 xdtv-2.4.0.ebuild 5303
 RMD160 917c5148f4a22cf19f875b7b5f29e1ecd799683a xdtv-2.4.0.ebuild 5303
 SHA256 b8bc79102656770308cf9c1decf6d0df9729d4acf20507f6af5abc63f157ef6d xdtv-2.4.0.ebuild 5303
-MISC ChangeLog 7793 RMD160 a777f4d0bd16c04c5c128055a1d0c1c97c794d5b SHA1 5fe1fbfeb2067a47ff231ffd6117683eac418052 SHA256 fde1f67fa85290735b214eb4eb0eeee07af55cdb84a94110a823a3b0bbae3013
-MD5 a80ddaeffe60c3eceade87280105538d ChangeLog 7793
-RMD160 a777f4d0bd16c04c5c128055a1d0c1c97c794d5b ChangeLog 7793
-SHA256 fde1f67fa85290735b214eb4eb0eeee07af55cdb84a94110a823a3b0bbae3013 ChangeLog 7793
+MISC ChangeLog 7918 RMD160 e03683d4d63fdcaa01783bec085d95ec2cd0d8d6 SHA1 a12933e620c964a793e995ac8456c635ca8c88a4 SHA256 b62e00880d322979ef70f25c6d1aa350bceb0e94cdb2a610094528157e97cf1c
+MD5 c2267a194d67d4fa7a8dd8c2f347150b ChangeLog 7918
+RMD160 e03683d4d63fdcaa01783bec085d95ec2cd0d8d6 ChangeLog 7918
+SHA256 b62e00880d322979ef70f25c6d1aa350bceb0e94cdb2a610094528157e97cf1c ChangeLog 7918
 MISC metadata.xml 251 RMD160 5a95bc58fcda94b2d82b3040b6730442e120f8ea SHA1 06b6e03f61417e4af6428787da39f3e5f76b6bf1 SHA256 27a61643c6fa329d9ffed2f5517d4f142d60b94836413a2fdfe3cfdc085a9d38
 MD5 e94a425466daf4d1f823b904e88608cd metadata.xml 251
 RMD160 5a95bc58fcda94b2d82b3040b6730442e120f8ea metadata.xml 251
@@ -135,9 +135,9 @@ MD5 ba8f8dd083356bdb03e4d36e87affa1f files/digest-xdtv-2.4.0 9475
 RMD160 38d46af6cadbede4736f79def3483f125ef0b052 files/digest-xdtv-2.4.0 9475
 SHA256 61eda25e36006d44ec76fb8cc360ae82ba81ea27124dce074f6cf15966020f7a files/digest-xdtv-2.4.0 9475
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.2 (GNU/Linux)
+Version: GnuPG v2.0.4 (GNU/Linux)
 
-iD8DBQFF4C1kvFcC4BYPU0oRAk6kAKCWt8f881O9jNbrl1BtbFqMl9ZTWACfT6Aq
-TjWgaet2MoHor57JX/r72RY=
-=CxLk
+iD8DBQFGbqdBt2vP6XvVdOcRAnAtAJwJxKd7oZcWUgaSuHVDwwAjT4NBRQCg10bU
+uTAAasbUbiI+CapbOEXc7ic=
+=3E7y
 -----END PGP SIGNATURE-----
