@@ -1,11 +1,11 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/xdtv-2.2.0-r1.ebuild,v 1.14 2007/01/07 15:12:13 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/xdtv-2.2.0-r1.ebuild,v 1.15 2007/06/12 14:01:27 zzam Exp $
 
 WANT_AUTOMAKE="1.7"
 WANT_AUTOCONF="2.5"
 
-inherit font multilib autotools
+inherit font multilib autotools eutils
 
 IUSE="alsa jpeg encode ffmpeg xvid lirc xinerama neXt Xaw3d mmx zvbi aqua_theme carbone_theme xv debug dvb"
 
